--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/cli-platform-android": "^13.2.0",
     "react": "18.2.0",
     "react-native": "0.73.1",
